# podite

./: .gitignore  LICENSE  README.md  pyproject.toml
pod/: __init__.py  _utils.py  bytes.py  catalogs.py  core.py  decorators.py  errors.py  json.py
pod/types/: __init__.py  _utils.py  array.py  atomic.py  builtin.py  enum.py  misc.py  rust.py
podite/: __init__.py  _utils.py  bytes.py  catalogs.py  core.py  decorators.py  errors.py
podite/types/: __init__.py  array.py  atomic.py  builtin.py  enum.py  misc.py  rust.py
tests/: test_integration.py  test_invariants.py  test_readme.py
tests/unit/: test_array.py  test_atomic.py  test_builtin.py  test_dataclass.py  test_enum.py  test_misc.py  test_rust.py
