[tool.poetry]
name = "podite"
version = "0.1.0"
description = "What you see is what you get serialization for Plain Old Data"
authors = ["Nima Hamidi <hamidi@alumni.stanford.edu>", "Joe Howarth <josephehowarth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.930"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
